fixed rounded corners with 3:1 ratio for border-radius as well as latest and also fixed background of latest image to inline style, need to fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -56,11 +56,6 @@
   min-height: 100vh;
 } */
 
-/* **border override removal for cards from bootstrap for styling ** */
-.cardOverstyle {
-  border-radius: 1rem !important
-}
-
 .nav-link:hover {
   color: black;
   font-weight: bolder;
